# yabai-workspaces

./: .gitignore  README.md  pyproject.toml
yabai_workspaces/: models.py  types.py  utils.py  workspace_manager.py  yabai.py
yabai_workspaces/api/: main.py  yabai_events.py
yabai_workspaces/layouts/: base_layout.py  layout.py  layout_handler.py  window_handler.py
yabai_workspaces/scripts/: apply_layout.py
