[tool.poetry]
name = "yabai-workspaces"
version = "0.1.0"
description = ""
authors = ["Prescott Murphy <prurph@gmail.com>"]
readme = "README.md"
packages = [{include = "yabai_workspaces"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
