[tool.poetry]
name = "yabai-workspaces"
version = "0.1.0"
description = "Automate saving and restoring window arrangements on macOS with yabai."
authors = ["Prescott Murphy <prurph@gmail.com>"]
readme = "README.md"
packages = [{include = "yabai_workspaces"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
ipdb = {version = "^0.13.9", optional = true}

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
pytest = "^7.1.3"

[tool.poetry.extras]
debug = ["ipdb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
