[tool.poetry]
name = "yabai-workspaces"
version = "0.1.0"
description = "Automate saving and restoring window arrangements on macOS with yabai."
authors = ["Prescott Murphy <prurph@gmail.com>"]
readme = "README.md"
packages = [{ include = "yabai_workspaces" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
ipdb = "^0.13.13"
fastapi = "^0.105.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = { version = "^22.12.0", allow-prereleases = true }
pytest = "^7.4.3"
pynvim = "^0.5.0"

[tool.poetry.extras]
debug = ["ipdb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
